Dark mode fixes

--- a/src/components/Documents/index.module.scss
+++ b/src/components/Documents/index.module.scss
@@ -57,14 +57,10 @@
             .label_heading {
                 font-size: 16px;
                 letter-spacing: 0.53px;
-                color: #00000080;                
             }
             .input_field {
                 height: 60px;
-                background-color: #C3C3C31F;
-                border: 1px solid #0000001F;
                 border-radius: 4px;
-                color: #111111;
                 text-align: left;
                 font-size: 20px;
                 padding-left: 12px;
@@ -148,14 +144,10 @@
             text-align: left;
             font-size: 16px;
             letter-spacing: 0.53px;
-            color: #00000080;
         }
         .input_field {
             height: 60px;
-            background-color: #c3c3c31f;
-            border: 1px solid #0000001f;
             border-radius: 4px;
-            color: #111111;
             text-align: left;
             font-size: 20px;
             padding-left: 12px;
