--- a/src/components/OrderDetails/index.module.scss
+++ b/src/components/OrderDetails/index.module.scss
@@ -34,20 +34,15 @@
               line-height: 0.5;
               margin-bottom: 0;
               letter-spacing: 0.53px;
-              color: #00000080;
               position: absolute;
               pointer-events: none;
               box-sizing: border-box;
-              background: #ffffff;
               transform: translateY(-31px);
               transition: 0.3s all ease-in-out;
           }
           .input_field {
               height: 60px;
-              background-color: #C3C3C31F;
-              border: 1px solid #0000001F;
               border-radius: 4px;
-              color: #111111;
               font-size: 20px;
               font-weight: 500;
               outline: none;
@@ -55,12 +50,10 @@
               position: relative;
               box-sizing: border-box;
               &:invalid + label {
-                  background: none;
                   transform:translateY(0);
               }
               &:focus {
                   & + label {
-                      background: #ffffff;
                       transform:translateY(-31px);
                   }
               }
