--- a/src/components/Register/index.module.scss
+++ b/src/components/Register/index.module.scss
@@ -41,13 +41,11 @@
   }
 
   .body {
+    padding: 0;
     background-color: #ffffff;
     box-shadow: 0px 3px 12px #cad0e2;
     border: 1px solid #d2d7e5;
     border-radius: 6px;
-
-    .line {
-    }
   }
 }
 
